# software-foundary

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md  git-workflow.md
docs/: design-deviations.md  software-foundary-design.md  status.html
docs/adrs/: 001-api-response-structure.md  README.md
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
packs/default/: pack.toml
src/foundry/: cli.py
tests/: test_cli.py  test_cli_recovery.py
tests/api/: conftest.py  test_gates.py  test_knowledge_route.py  test_memory_route.py  test_metrics.py  test_packs_route.py  test_portfolio.py  test_portfolio_e2e.py  test_projects.py  test_runs.py  test_scheduler.py  test_scheduler_fairness.py  test_schemas.py  test_sessions.py  test_stream.py
tests/drivers/: test_codex.py  test_fake.py
tests/fixtures/: cli_demo.toml  dangling_needs.toml  fake_codex_cli.sh  stuck_human_task.toml
tests/kg/: test_context_reduction_benchmark.py  test_memory_retrieval.py  test_service.py
tests/metrics/: test_rollup.py
tests/orchestrator/: test_budget.py  test_compound.py  test_context_bundle.py  test_cost.py  test_escalation.py  test_fanout.py  test_fanout_e2e.py  test_gate_overrides.py  test_interference.py  test_memory_compounding_e2e.py  test_review_loop.py  test_tick.py  test_worktrees.py
tests/packs/: test_default_pack.py  test_loader.py  test_pack_e2e.py  test_resolve.py
tests/playbook/: test_lint.py  test_loader.py  test_materializer.py  test_schema.py
tests/store/: test_archival.py  test_db.py  test_memory.py  test_store.py  (+1 more)
(+112 files in other folders)
