[project]
name = "software-foundary"
version = "0.1.0"
description = "Foundry — autonomous, plan-first, phase-gated agent orchestration platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "jsonschema>=4.23",
    "sse-starlette>=2.1",
    "psutil>=6.0",
    "typer>=0.13",
    "python-ulid>=2.0",
]

[project.scripts]
foundry = "foundry.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foundry"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
